2020-05-23 Franz Holzinger <franz@ttproducts.de>
    * fix issue #2: The method transformWhere shall take care of the blanks before and after round brackets

2020-05-20 Franz Holzinger <franz@ttproducts.de>
    * modifications according the Coding Guidelines
    * support for backend query generation

2020-01-30 Franz Holzinger <franz@ttproducts.de>
    * readd autoloader file ext_autoload.php

2019-11-14 Franz Holzinger <franz@ttproducts.de>
    * commpatibility with TYPO3 9.4 deprecation no. 85543: Consider the sys_language_uid coming from TYPO3\CMS\Core\Context\Context method getAspect.

2019-11-04 Franz Holzinger <franz@ttproducts.de>
    * replace the PHP method strstr by the faster method strpos
    * modify composer.json

2019-07-16 Franz Holzinger <franz@ttproducts.de>
    * ready for TYPO3 9.5.x

2018-10-23 Franz Holzinger <franz@ttproducts.de>
    * initialize $listArr.

2018-09-20 Franz Holzinger <franz@ttproducts.de>
    * initialize internal array variables as arrays

2018-05-07 Franz Holzinger <franz@ttproducts.de>
    * migration: replace all t3lib_div calls by TYPO3\CMS\Core\Utility\GeneralUtility. TYPO3 6.1 is a minimum requirement now.
    * Remove the file ext_autoload.php because the composer.json should do the job now.
    * migration: use TYPO3\CMS\Core\Utility\DebugUtility and TYPO3\CMS\Core\Utility\MathUtility for functions intInRange, debug and debugTrail of class tx_div2007_core.


2017-04-14 Franz Holzinger <franz@ttproducts.de>
    * bugfix: error in composer.json

2017-03-28 Franz Holzinger <franz@ttproducts.de>
    * ready for TYPO3 8.x
    * add composer.json

2016-12-01 Franz Holzinger <franz@ttproducts.de>
	* bug fix: setRequiredFieldArray shall filter out all fields which are not coming from TYPO3 or are in the TCA

2016-10-18 Franz Holzinger <franz@ttproducts.de>
	* new feature: add an optional replace configuration for the method searchWhere in order to have alternatives for character sequences
